# zraftdb

./: .gitignore  CMakeLists.txt  README.md  build.sh  ctl_docker.py  deploy.sh  docker.py  gitbuild.sh  go.mod  ips.copy.txt  ips.txt  killprocess.sh  process.py  run.py  server.key
config/: client_ip.txt  config.json  ips.cfg  ips.txt  local.json  local_ip.txt
consistent/: consistent.go  consistent_test.go
cpb/: main.cpp
gencerts/: gencerts.go
http/: http.go
main/: main.go
pbft/: cert.go  client.go  config.go  cypher.go  log.go  main.go  message.go  net.go  node.go  pbft.go  replica.go  server.go  tcp.go  util.go
praft/: build.sh  deploy.sh  go.mod  remote.sh
rpbft/: cert.go  client.go  config.go  cypher.go  log.go  main.go  message.go  node.go  server.go  util.go
script/: ctl_docker.py  gencert_test.go  get_local_ip.py  init.py  kill_pbft.sh  multiprocess.py  process.py  remote.py  run.sh  scp_all.py  scp_all.sh  scpall.cpp  set_local_ip.py  tc_gen.py
server/: server.go
src/: .gitignore
test/: buf_test.go  byte_test.go  cert_test.go  chan_test.go  digest_test.go  exec_test.go  gencert_test.go  goroutine_test.go  hashtable_test.go  ips.txt  json_test.go  localIp_test.go  log_test.go  longTermConn_test.go  message_test.go  pbft_test.go  route_test.go  sign_test.go
zlab/: deploy.sh  genports.py  kill.sh  master.sh  raft.sh
zlog/: log.go
zpbft/: .gitignore  README.md  client.go  config.go  consistentHash.go  example_test.go  go.mod  main.go  naive.go  node.go  pri.pem  pub.pem  server.go  tree.go
zraft/: .gitignore  makefile  multirun.sh  (+1 more)
(+40 files in other folders)
